# Git-Backup

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  CLAUDE.md  Cargo.toml  Dockerfile  GitBackup.csproj  GitBackup.slnx  Program.cs  README.md  compose.yaml  entrypoint.sh
Configuration/: LiveSettings.cs  SecretResolver.cs  Settings.cs  SettingsLoadResult.cs  SettingsLoader.cs
Configuration/Models/: ConcurrencyConfig.cs  CredentialConfig.cs  JobScheduleConfig.cs  LoggingConfig.cs  PayloadSignatureModes.cs  RepositoryJobConfig.cs  RepositoryJobModes.cs  RepositoryProviders.cs  ScheduleConfig.cs  StorageConfig.cs
Configuration/Yaml/: ScalarOrSequenceConverter.cs
GitBackup/: GitBackup.csproj
GitBackup.CLI/: GitBackup.CLI.csproj  Program.cs
GitBackup/Configuration/Models/: CredentialConfig.cs  RepositoryJobModes.cs  StorageConfig.cs
GitBackup/Runtime/: BuildMetadata.cs  DurationFormatter.cs
GitBackup/Services/Git/: GitCliRepositoryService.cs  IGitRepositoryService.cs
GitBackup/Services/Providers/: DiscoveredRepository.cs  ForgejoRepositoryProviderClient.cs  GitHubRepositoryProviderClient.cs  ProviderHttpClientBase.cs  RepositoryProviderClientFactory.cs
GitBackup/Services/Repositories/: RepositoryRetentionService.cs  StorageIndexDocuments.cs
GitBackup/Services/Storage/: SimpleS3ObjectStorageService.cs
Runtime/: AppLogger.cs  DurationFormatter.cs
Services/: CredentialResolver.cs  RetryDelay.cs
Services/Git/: GitCliRepositoryService.cs  GitCredential.cs  GitRemoteInaccessibleException.cs  IGitRepositoryService.cs
Services/Paths/: GitRepositoryUrl.cs  RepositoryPathInfo.cs  RepositoryPathParser.cs  StorageKeyBuilder.cs
Services/Providers/: AttachmentDownloader.cs  DiscoveredRepository.cs  ForgejoRepositoryProviderClient.cs  GitHubRepositoryProviderClient.cs  GitLabRepositoryProviderClient.cs  GiteaProviderClientBase.cs  IProjectMetadataProviderClient.cs  IRepositoryProviderClient.cs  ProjectMetadataModels.cs  ProviderHttpClientBase.cs  RepositoryProviderClientFactory.cs
Services/Repositories/: LocalMirrorStore.cs  ProjectMetadataSyncService.cs  RepositoryRetentionService.cs  RepositorySyncService.cs  StorageMetadataDocuments.cs
Services/Scheduling/: CronScheduleParser.cs  ScheduledJobRunner.cs
Services/Storage/: ArchiveUploadResult.cs  IObjectStorageService.cs  MimeTypeResolver.cs  NoSilentSuccessHandler.cs  SimpleS3ObjectStorageService.cs
gitbackup-rs/: .gitignore  Cargo.toml  Dockerfile  PROMOTION.md  rust-toolchain.toml
gitbackup-rs/src/: config.rs  git.rs  lib.rs  main.rs  paths.rs  providers.rs  repositories.rs  runtime.rs  scheduling.rs  storage.rs
gitbackup-rs/src/config/: enums.rs  live.rs  loader.rs  model.rs
gitbackup-rs/src/git/: credential.rs  error.rs  service.rs
gitbackup-rs/src/paths/: git_url.rs  key_builder.rs
gitbackup-rs/src/providers/: client.rs  discovered.rs  forgejo.rs  gitea.rs  github.rs  gitlab.rs  http_base.rs  mappers.rs  models.rs
gitbackup-rs/src/repositories/: documents.rs  metadata_sync.rs  retention.rs
gitbackup-rs/src/runtime/: build_metadata.rs  logger.rs
gitbackup-rs/src/scheduling/: cron.rs
gitbackup-rs/src/storage/: mime.rs  object_store.rs
gitbackup-rs/tests/: sync.rs
src/: git.rs  main.rs  repositories.rs  retry.rs
src/config/: one_or_many.rs  secrets.rs
src/paths/: repo_path.rs
src/providers/: attachments.rs  forgejo.rs  gitea.rs  http_base.rs  json.rs
src/repositories/: local_mirror.rs  metadata_sync.rs  sync.rs
src/runtime/: duration.rs
src/scheduling/: runner.rs
src/storage/: s3.rs
tests/: config.rs  paths.rs  sync.rs
