[package]
name = "gitbackup"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Backs up Git-forge repositories to S3-compatible object storage (Rust rewrite)"
publish = false

[lib]
name = "gitbackup"
path = "src/lib.rs"

[[bin]]
name = "gitbackup"
path = "src/main.rs"

[dependencies]
# Core runtime + diagnostics used by every module. Heavier, phase-specific dependencies
# (rust-s3, croner, tar, async-compression, reqwest, serde stack, unix process-group kill)
# are added in the phase that first needs them, to keep incremental builds fast.
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "process",
    "signal",
    "fs",
    "io-util",
    "net",
    "time",
    "sync",
] }
tokio-util = { version = "0.7", features = ["io", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
anyhow = "1"
thiserror = "2"

# P1: config + logging.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
regex = "1"
sha2 = "0.10"
arc-swap = "1"
croner = "2"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
chrono-tz = "0.10"
# Pinned below url 2.5.3 to keep idna on 0.5 (unicode-* backend). url >=2.5.3 pulls the ICU/yoke
# stack via idna 1.x, which fails to build here and roughly doubles the dependency tree and binary
# size for punycode we do not need.
url = "=2.5.2"
percent-encoding = "2"

# P3: S3-compatible object storage. rustls (no OpenSSL); default features off drops native-tls.
rust-s3 = { version = "0.35", default-features = false, features = ["tokio-rustls-tls"] }
flate2 = "1"
tar = "0.4"
async-trait = "0.1"
rand = "0.8"

# P4: git CLI service.
base64 = "0.22"

# P5: forge provider clients (hand-written over reqwest + serde_json). rustls, no OpenSSL.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "gzip"] }
futures = "0.3"

# Unix-only: kill the git process group (and its http/lfs children) on cancellation. The app is
# Linux-targeted; on Windows (local dev only) the child is killed without tree semantics.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
# Optimize for size + low memory footprint per the rewrite's primary goal.
opt-level = "z"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
